<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CleaningActivity">
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indoor"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="5dp"
            >
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <ImageView
                android:id="@+id/appart"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/appartments"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Appartments"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/offices"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Offices"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/schools"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Schools"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outdoor"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="5dp"
            >
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/gardening"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="gardening"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/slashing"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Slashing"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/trees"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="cutting trees"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@color/green"
        android:layout_marginTop="50dp"/>

</LinearLayout>